# watcher

./: .gitignore  Cargo.toml  Makefile  README.md  licenserc.toml
.github/workflows/: ci.yml
src/: desc.rs  event_filter.rs  key_range.rs  lib.rs  testing.rs  type_config.rs  util.rs
src/dispatch/: command.rs  dispatcher.rs  dispatcher_handle.rs
src/watch_stream/: mod.rs  sender.rs  stream.rs
tests/it/: dispatcher.rs  main.rs  metrics.rs
